<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Nav!</string>
    <string name="Chn">Station</string>
    <string name="Alt">Altitude</string>
    <string name="Qnh">QNH</string>
    <string name="Lvl">Flight Level</string>
    <string name="Pos">Position Relative</string>
    <string name="app_name">flightplanner</string>
<string name="detail_prompt">Map Detail</string>
<string-array name="detail_array">
<item>No basemap [2MB download]</item>
<item>Low Detail [10MB download]</item>
<item>High Detail [1GB download]</item>
<item>Very High - recommended [2GB]</item>
<item>Super High [4GB]</item>
</string-array>
<string name="ok">OK</string>
<string name="upload">Upload</string>
<string name="back">Back</string>
<string name="clearall">Clear All</string>
<string name="north_up_default_str">North Up by default</string>
<string name="relto">Relative To</string>
</resources>
