<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
 
 <TextView android:id="@+id/label" 
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content" 
              android:text="First create account on www.swflightplanner.se (it's Free)!" />                
  
 <TextView android:id="@+id/label" 
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content" 
              android:text="Login Name" />                
 <EditText
        android:id="@+id/edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>    

 <TextView android:id="@+id/label" 
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content" 
              android:text="Password" />                
 <EditText
        android:id="@+id/editpass"
        android:layout_width="fill_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content"/>
            
 <TextView android:id="@+id/label" 
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content" 
              android:text="Map Detail Level" />                
 <Spinner 
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/detail_prompt"
    />
 <CheckBox android:id="@+id/northup_default" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/north_up_default_str"></CheckBox>
 <CheckBox android:id="@+id/vibrate_default" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Vibrate to warn of airspaces ahead"></CheckBox>
 <CheckBox android:id="@+id/terrain_warning_default" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Show terrain warnings (always only when moving 10kt+)"></CheckBox>
 <CheckBox android:id="@+id/autosync_default" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Automatically sync weather and airspace data 30m and 10m before each scheduled trip."></CheckBox>
 <CheckBox android:id="@+id/cvr_default" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Cockpit Voice Recorder. Automatically record all audio to /mnt/sdcard/CVR directory."></CheckBox>
 <CheckBox android:id="@+id/sideview_default" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Elevation profile - show terrain elevation profile along flight path in lower part of screen."></CheckBox>
 
<Button
    android:id="@+id/button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/ok" />

 </LinearLayout>
</ScrollView>